--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/webpack-env": "1.13.1",
     "office-ui-fabric-react": "6.189.2",
     "react": "16.8.5",
-    "react-dom": "16.8.5"
+    "react-dom": "16.8.5",
+    "react-select": "^3.1.1"
   },
   "resolutions": {
     "@types/react": "16.8.8"
