--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-dom": "16.8.5",
     "react-select": "^3.1.1",
     "@fluentui/react-tabs": "^0.6.21",
-    "@uifabric/example-data": "^7.1.5"
+    "@uifabric/example-data": "^7.1.5",
+    "@microsoft/decorators": "1.11.0",
+    "@microsoft/sp-listview-extensibility": "1.11.0"
   },
   "resolutions": {
     "@types/react": "16.8.8"
@@ -46,6 +48,10 @@
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
-    "gulp": "3.9.1"
+    "gulp": "~3.9.1",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.3",
+    "@types/webpack-env": "1.13.1",
+    "@types/es6-promise": "0.0.33"
   }
 }
