--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rb-workflow-promociones",
+  "name": "rb-workflow-promociones-mx",
   "version": "0.0.1",
   "private": true,
   "main": "lib/index.js",
