--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,8 +3,8 @@
     "isCreatingSolution": true,
     "environment": "spo",
     "version": "1.10.0",
-    "libraryName": "rb-workflow-promociones",
-    "libraryId": "46966589-82f7-457e-9b9d-68325a5c982c",
+    "libraryName": "rb-workflow-promociones-mx",
+    "libraryId": "46966589-82f7-457e-9b9d-68325a5c983c",
     "packageManager": "npm",
     "isDomainIsolated": false,
     "componentType": "webpart"
