--- a/src/webparts/promoFormWebPart/PromoFormWebPartWebPart.manifest.json
+++ b/src/webparts/promoFormWebPart/PromoFormWebPartWebPart.manifest.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "eebaa411-ef94-4570-aafe-5b9076ea1d84",
-  "alias": "PromoFormWebPartWebPart",
+  // "id": "eebaa411-ef94-4570-aafe-5b9076ea1d85",
+  "id": "9a8656d8-a415-4a73-b6a6-e841ba3bbece",
+  "alias": "PromoFormWebPartWebPartMX",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -15,13 +16,13 @@
   "supportedHosts": ["SharePointWebPart"],
 
   "preconfiguredEntries": [{
-    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
+    "groupId": "5c03119e-3074-46fd-976b-c60198311f71", // Other
     "group": { "default": "Other" },
-    "title": { "default": "PromoFormWebPart" },
-    "description": { "default": "PromoFormWebPart description" },
+    "title": { "default": "PromoFormWebPartMX" },
+    "description": { "default": "PromoFormWebPartMX description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "PromoFormWebPart"
+      "description": "PromoFormWebPartMX"
     }
   }]
 }
